Add custom requirement display info